[package]
name = "rs-zip-index"
version = "0.1.0"
edition = "2021"



[[bin]]
name="zip-index"
path="src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
async_zip= { path="./../../../rs-async-zip",version = "0.0.15",features = ["full"] }
anyhow = "1.0.75"
clap = { version = "4.1.1", features = ["derive"] }
futures = "0.3.29"
futures-util = { version = "0.3", features = ["io"] }
tokio = { version = "1.24.1", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
tokio-util = { version = "0.7.4", features = ["full"] }
bytes = "1.3.0"
async-trait = "0.1.61"
tokio-stream = { version = "0.1.11", features = ["io-util"] }
sanitize-filename="0.5.0"
